-Changed all the gip parts in which covPerGe or covPerBin are called with the new command execution.
-Changed the downstream scripts using the covPerBin function or accepting covPerBin files (adapting the syntax to read them).
-removed BITFLAG option
-introduced delDup option
-chromosomes now accept the "all" option to consider all the chromosomes by default
- 


###################
#v1.0.2- 23092020#
###################
-introduced Red as a default tool to mask repeat
-removed unused:
genePredToBed 
gtfToGenePred 
exonGTF_2_fasta.sh 
prepareAssembly.sh 
gtf2bed12.sh 
-the user must have the caution to specify all the input parameters not relative to the host system, but relative to where the data will be visible in the container. 
So all he/she needs to do is:
1) bind the directory ('-B  /ebi/fq/:/fq')
2) provide the input files relative to the mounted directory (--reads /fq/sample.fastq.gz )


###################
#v1.0.1 - 05092020#
###################
-Adopted miniCRAN local R packages repository 
-Renamed giptools.sif
-prepared several contrast modules:
  SNV
  binCNV
  binDensity
  geCNV
  geInteraction
  genomeDistance
  karyotype
  ternary
  ternaryBin

###################
#v1.0.1 - 22072020#
###################
Removed several unused L-GERT job arrays scripts

###################
#v1.0.1 - 20072020#
###################
Error when run on TARS Due to the fact that the R libraries were searched in the host home and not on the container

 Error: package or namespace load failed for 'VariantAnnotation' in loadNamespace(i, c(lib.loc, .libPaths()), versionCheck = vI[[i]]):
 namespace 'DBI' 1.0.0 is being loaded, but >= 1.1.0 is required

===> Workaround in the cluster
export R_LIBS=/usr/local/lib/R/library/
export R_LIBS_USER=/usr/local/lib/R/library/
then in the NF config envWhitelist='R_LIBS,R_LIBS_USER'
