@@ -30,4 +30,7 @@ All the best,
 Daniel Schmelter
 UCSC Genome Browser
 
-
+####
+reagarding GATK:
+https://github.com/broadgsa/gatk/blob/master/licensing/protected_license.txt
+2.2 No Sublicensing or Additional Rights. LICENSEE shall not sublicense or distribute the PROGRAM, in whole or in part, without prior written permission from BROAD. LICENSEE shall ensure that all of its users agree to the terms of this Agreement. LICENSEE further agrees that it shall not put the PROGRAM on a network, server, or other similar technology that may be accessed by anyone other than the LICENSEE and its employees and users who have agreed to the terms of this agreement.
